--- a/deploy/.env.example
+++ b/deploy/.env.example
@@ -8,7 +8,7 @@ APP_TIMEZONE=UTC
 LOG_CHANNEL=stack
 LOG_SLACK_WEBHOOK_URL=
 
-DB_CONNECTION=postgresql
+DB_CONNECTION=pgsql
 DB_HOST=lotteries_db
 DB_PORT=5432
 DB_DATABASE=homestead
