--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -31,3 +31,15 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
+  
+  lotteries_pgadmin:
+    image: dpage/pgadmin4
+    restart: always
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@admin.com
+      PGADMIN_DEFAULT_PASSWORD: root
+    ports:
+      - "5050:80"
+    depends_on:
+      lotteries_db:
+        condition: service_healthy
