--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -2,6 +2,7 @@ version:  '3.9'
 
 services:
   lotteries_api:
+    container_name: lotteries_api
     build: dockerfile/php
     restart: on-failure
     ports:
@@ -17,15 +18,18 @@ services:
     command: php -S 0.0.0.0:8080 public/index.php
 
   lotteries_db:
+    container_name: lotteries_db
     image: postgres:13.3
+    restart: on-failure
     environment:
       POSTGRES_DB: ${DB_DATABASE}
       POSTGRES_USER: ${DB_USERNAME}
       POSTGRES_PASSWORD: ${DB_PASSWORD}
+      PGDATA: /data/postgres
     expose:  
       - "5432"
     volumes:
-      - ./db/user:/var/lib/pgsql
+        - ./db/data:/data/postgres/
     healthcheck:
       test: ["CMD-SHELL", "pg_isready"]
       interval: 10s
@@ -33,8 +37,9 @@ services:
       retries: 5
   
   lotteries_pgadmin:
+    container_name: lotteries_pgadmin
     image: dpage/pgadmin4
-    restart: always
+    restart: on-failure
     environment:
       PGADMIN_DEFAULT_EMAIL: admin@admin.com
       PGADMIN_DEFAULT_PASSWORD: root
